--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,6 +1,13 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@300;600&display=swap" rel="stylesheet">
+  <script async src="https://analytics.eu.umami.is/script.js" data-website-id="55ebf2bd-a06f-4b81-959e-ab849c12abbc"></script>
+  <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+
   <meta
     name="viewport"
     content="width=device-width, initial-scale=1, shrink-to-fit=no"
