--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -53,7 +53,9 @@
     >Featured</span
   >
   {{ end }}
-  <h2 class="!my-0 pb-1 font-bold !leading-none">{{ .Title }}</h2>
+  <a href="{{ .Permalink }}" style="text-decoration: none; color: inherit;">
+    <h2 class="!my-0 pb-1 font-bold !leading-none">{{ .Title }}</h2>
+  </a>
 
   {{ if .Params.tags }}
   <div style="margin-top: 4px;">
@@ -61,7 +63,7 @@
     <a
       class="listtags"
       href="{{ $href }}"
-      >{{ . }}</a
+      ># {{ . }}</a
     >
     {{ end }}
   </div>
@@ -70,7 +72,6 @@
   <time class="text-sm antialiased opacity-60"
     >{{ .Date | time.Format ":date_medium" }}</time
   >
-  <a class="absolute inset-0 text-[0]" href="{{ .Permalink }}">{{ .Title }}</a>
 </section>
 {{ end }}
 
