--- a/assets/main.css
+++ b/assets/main.css
@@ -2092,12 +2092,12 @@ article .highlight > div table tr td:last-of-type {
 }
 
 .listtags {
-  background-color: #1d1d1d;
+  background-color: #813939;
   border-radius: 2rem;
   color: #fff;
   text-decoration: none;
-  padding: 4px 16px;
-  font-size: 0.775rem;
+  padding: 4px 13px;
+  font-size: 0.70rem;
 }
 
 :is(:where(.dark) .listtags) {
@@ -2105,7 +2105,7 @@ article .highlight > div table tr td:last-of-type {
   border-radius: 2rem;
   color: #000;
   text-decoration: none;
-  padding: 4px 16px;
+  padding: 4px 13px;
   font-size: 0.775rem;
 }
 
