--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -15,4 +15,10 @@
     target="_blank"
     >✎ Paper</a
   >
+  <a
+    class="link"
+    href="https://note.soulter.top"
+    target="_blank"
+    >📓 My Notes</a
+  >
 </footer>
